--- a/app/views/drinks/index.html.erb
+++ b/app/views/drinks/index.html.erb
@@ -12,6 +12,7 @@
   </thead>
 
   <tbody>
+   <!--  <% ordenados = @drinks.sort {|a,b| a.votes.count <=> b.votes.count }%> -->
     <% @drinks.each do |drink| %>
       <tr>
         <td><%= link_to drink.title, drink %></td>
